--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <html>
 
 <head>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.9/brython.min.js">
+    <title>Project Demo</title>
+<!--     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.9/brython.min.js">
     </script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.9/brython_stdlib.js">
-    </script>
+    </script> -->
 </head>
 
-<body onload="brython()">
-
-    <script type="text/python">
+<!-- <body onload="brython()"> -->
+<body>
+    
+<!--     <script type="text/python">
         from browser import document, alert, html
         document <= html.B("Hello, ") + "world !"
         
@@ -19,10 +21,10 @@
         document["mybtn"].bind("click", echo)
 
 
-        </script>
+        </script> -->
 
     <input id="inp"><button id="mybtn">Click!</button>
-
+    Hello World!
 </body>
 
 </html>
